--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://example.com"
+baseURL = "https://github.com/DRMCRL/bioinformatics-training/tree/master/public"
 languageCode = "en"
 DefaultContentLanguage = "en"
 title = "Bioinformatics Training"
