Changed baseURL in config.toml back again

--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,4 @@
+baseUrl = "https://drmcrl-bioinformatics-training.netlify.app/"
 languageCode = "en"
 DefaultContentLanguage = "en"
 title = "Bioinformatics Training"
@@ -22,7 +23,6 @@ favicon = "favicons/"
 customCss = []
 customJs = []
 mainSections = ["post"]
-images = ["images/site-feature-image.png"]
 # Google Site Verification
 #googleSiteVerify = "ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789"
 
