Changed path for images

--- a/config.toml
+++ b/config.toml
@@ -17,7 +17,7 @@ enableRobotsTXT = true
 title = "Bioinformatics Training"
 author = "Steve Pederson"
 description = "Dame Roma Mitchell Cancer Research Laboratories"
-profilePicture = "images/sp.jpg"
+profilePicture = "/images/sp.jpg"
 keywords = ""
 favicon = "favicons/"
 customCss = []
